<resources>
    <string name="app_name">Nashville Open WiFi</string>
    <string name="action_map">Map</string>

    <string name="title_activity_detail">Details</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">openwifi.dustinmreed.com</string>
    <string name="content_authority">com.dustinmreed.openwifi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragmentest</string>

    <!-- Navigation Drawer States -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_map">Map View</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_library">Library</string>
    <string name="action_all">All Locations</string>
    <string name="action_communitycenter">Regional Community Center</string>

    <string name="action_publicgathering">Public Gathering</string>
    <string name="libraries">Libraries</string>
    <string name="public_gatherings">Public Gathering Locations</string>
    <string name="regional_community_centers">Regional Community Centers</string>
    <string name="empty_fragment_location">Please Select a Location</string>
    <string name="launcher_icon">Launcher Icon</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Sync Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">false</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="listview_icon">List Icon</string>
    <string name="mapsLink">https://www.google.com/maps/search/</string>

</resources>
