<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="50"
        android:title="@string/action_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_all"
        android:orderInCategory="50"
        android:title="@string/action_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_library"
        android:orderInCategory="50"
        android:title="@string/action_library"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_communitycenter"
        android:orderInCategory="50"
        android:title="@string/action_communitycenter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_publicgathering"
        android:orderInCategory="50"
        android:title="@string/action_publicgathering"
        app:showAsAction="never" />
</menu>
